--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div>
 
   <!-- Footer -->
-  <footer>
+  <footer class="footerbox">
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.linkedin.com/in/piotr-franczak-b45a32127/">Piotr Franczak</a>.
